1、dao单例修改； 2、线程池

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,5 @@
     <string name="search">搜索：</string>
 
     <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
-
+    <string name="du">&#176;</string>
 </resources>
