--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,8 @@
 
     <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
     <string name="du">&#176;</string>
+    <string name="lottery_ssq">双色球</string>
+    <string name="lottery_dlt">大乐透</string>
+    <string name="lottery_fc3d">福彩3D</string>
+    <string name="please_enter_lottery">请输入彩票号码</string>
 </resources>
