--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,6 @@
     <string name="lottery_dlt">大乐透</string>
     <string name="lottery_fc3d">福彩3D</string>
     <string name="please_enter_lottery">请输入彩票号码</string>
+    
+    <string name="salary_after_tax">￥%1$d</string>
 </resources>
