1.薪资计算完善； 2.bug修复

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="lottery_fc3d">福彩3D</string>
     <string name="please_enter_lottery">请输入彩票号码</string>
     
-    <string name="salary_after_tax">￥%1$.1f</string>
+    <string name="salary_after_tax">税后：￥%1$.1f</string>
     <string name="transition_name">express</string>
     <string name="zip">邮编：%1$s</string>
 </resources>
